@@ -24,7 +24,7 @@
 
 function usage()
 {
-	echo "Usage: $0 [iso-file-name.iso] [remaster-dir] [-g|--generate-md5] [-a|--arch=x86,x86_64,ia64,ppc] [-d|--description=CD_description]"
+	echo "Usage: $0 [iso-file-name.iso] [remaster-dir] [-h|--hybrid] [-g|--generate-md5] [-a|--arch=x86,x86_64,ia64,ppc] [-d|--description=CD_description]"
 }
 
 function failure()
@@ -39,9 +39,10 @@ function failure()
 
 ARCH="x86"
 GENERATE_MD5_FOR_NEW_ISO=0
+HYBRID=0
 DESCRIPTION="Remastered Ubuntu LiveCD"
 
-INPUT_PARAMS=`getopt -o d:ga: -l description:,generate-md5,arch: -n "$0" -- "$@"`
+INPUT_PARAMS=`getopt -o d:hga: -l description:,generate-md5,arch: -n "$0" -- "$@"`
 
 if [ $? != 0 ] ; then
 	exit 1
@@ -50,6 +51,7 @@ fi
 eval set -- "$INPUT_PARAMS"
 while :; do
   case "$1" in
+        -h|--hybrid) shift;HYBRID=1;;
         -g|--generate-md5) shift;GENERATE_MD5_FOR_NEW_ISO=1;;
         -a|--arch) shift; ARCH=$1; shift;;
 	-d|--description) shift; DESCRIPTION="$1"; shift;;
